--- a/css/project.css
+++ b/css/project.css
@@ -1,14 +1,53 @@
+/* @import url(chota.css); */
+
 :root {
 	--cubic-out: cubic-bezier(0.33, 1, 0.68, 1);
 }
 
-.description-hider {
-	overflow: hidden;
+.project-box:nth-child(odd) {
+	justify-content: flex-start;
 }
 
-@media (min-width: 600px) {
-	.project .project-description{
+.project-box:nth-child(even) {
+	justify-content: flex-end;
+}
+
+.project-box {
+	display: flex;
+}
+
+.project {
+	border-radius: 1rem;
+	filter: drop-shadow(0 10px 20px rgba(0, 0, 0, .25));
+	background-color: white;
+}
+.project img {
+	aspect-ratio: 1.62;
+	object-fit: cover;
+	border-radius: 1rem;
+}
+
+.description-hider {
+	position: absolute;
+	width:100%;
+	/* overflow: scroll; */
+}
+
+.project-description {
+	margin: 0;
+	overflow: hidden;
+	background-color: white;
+}
+
+/* collapse project descriptions on not mobile devices */
+@media not all and (hover:none) {
+	.project-description{
 		max-height: 0;
 		transition: max-height 0.3s var(--cubic-out);
 	}
+}
+
+.image-link {
+	margin: 0 !important;
+	display: inline-block;
 }
