--- a/css/index.css
+++ b/css/index.css
@@ -10,6 +10,12 @@
 	background-color: #fff9d0;
 }
 
+main {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
 .footer {
 	margin-top: 3rem;
 	padding: 2rem 0;
