--- a/css/project.css
+++ b/css/project.css
@@ -4,50 +4,46 @@
 	--cubic-out: cubic-bezier(0.33, 1, 0.68, 1);
 }
 
-.project-box:nth-child(odd) {
-	justify-content: flex-start;
-}
-
-.project-box:nth-child(even) {
-	justify-content: flex-end;
-}
-
-.project-box {
-	display: flex;
+.project-container:nth-child(3) {
+	margin-top: 15rem;
 }
 
 .project {
 	border-radius: 1rem;
 	filter: drop-shadow(0 10px 20px rgba(0, 0, 0, .25));
 	background-color: white;
+	border: 1px solid grey;
 }
+
 .project img {
 	aspect-ratio: 1.62;
 	object-fit: cover;
 	border-radius: 1rem;
+	display: block; /* close the gap between bottom and parent */
 }
 
-.description-hider {
+.hover-text {
 	position: absolute;
-	width:100%;
-	/* overflow: scroll; */
+	top: 100%;
+	left: 0;
+	width: 100%;
+	background-color: rgba(0, 0, 0, 0.8);
+	color: white;
+	transform: translateY(-10px);
+	opacity: 0;
+	transition: all 0.3s ease;
+	z-index: 10;
+	border-radius: 0 0 8px 8px;
 }
 
-.project-description {
-	margin: 0;
-	overflow: hidden;
-	background-color: white;
+.project:hover {
+	border-radius: 1rem 1rem 0 0;
 }
-
-/* collapse project descriptions on not mobile devices */
-@media not all and (hover:none) {
-	.project-description{
-		max-height: 0;
-		transition: max-height 0.3s var(--cubic-out);
-	}
+.project:hover .hover-text {
+	transform: translateY(0);
+	opacity: 1;
 }
 
 .image-link {
 	margin: 0 !important;
-	display: inline-block;
 }
